Corrected z-index of modals to make it on the top.

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -45,7 +45,6 @@ body
     top:0;
     width:100%;
     height:100%;
-    z-index:92;
 }
 
 .modal-content-container
